--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -8,6 +8,10 @@
 
 <section class="add-item-section">
   <div class="add-item-container">
-    
+    <app-add-item-form style="padding: 20px"></app-add-item-form>
   </div>
 </section>
+
+<hr styly="margint-top: 0;">
+
+<app-budget-item-list></app-budget-item-list>
